--- a/index.html
+++ b/index.html
@@ -17,10 +17,51 @@
                 </div>
             </div>
             <div class="formcontainer">
+                <div class="text">
+                    <h1>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, commodi! Sign up now to get started.</h1>
+                    <h2>You know you want to.</h2>
+                </div>
                 <div class="form">
-                    <form></form>
+                    <p>Lets do this!</p>
+                    <form action="" method="">
+                        <section>
+                            <div>
+                                <label for="firstname">First Name</label>
+                                <input type="text" id="firstname" name="firstname">
+                            </div>
+                            <div>
+                                <label for="lastname">Last Name</label>
+                                <input type="text" id="lastname" name="lastname">
+                            </div>
+                        </section>
+
+                        <section>
+                            <div>
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email">
+                            </div>
+                            <div>
+                                <label for="phonenumber">Phone Number</label>
+                                <input type="tel" id="phonenumber" name="phonenumber">
+                            </div>
+                        </section>
+                        
+                        <section>
+                            <div>
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="password">
+                            </div>
+                            <div>
+                                <label for="confirmpass">Confirm Password</label>
+                                <input type="password" id="confirmpass">
+                            </div>
+                        </section>
+                        <button type="submit">Create Account</button>
+                        <p>Already have an account? <a href="#">Log in</a></p>
+                    </form>
                 </div>
             </div>
         </div>
+        
     </body>
 </html>
