--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="mastercontainer">
@@ -18,42 +19,42 @@
             </div>
             <div class="formcontainer">
                 <div class="text">
-                    <h1>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, commodi! Sign up now to get started.</h1>
-                    <h2>You know you want to.</h2>
+                    <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, commodi! Sign up now to get started.</p>
+                    <p>You know you want to.</p>
                 </div>
                 <div class="form">
                     <p>Lets do this!</p>
-                    <form action="" method="">
+                    <form action="#" method="post">
                         <section>
                             <div>
                                 <label for="firstname">First Name</label>
-                                <input type="text" id="firstname" name="firstname">
+                                <input type="text" id="firstname" name="firstname" required>
                             </div>
                             <div>
                                 <label for="lastname">Last Name</label>
-                                <input type="text" id="lastname" name="lastname">
+                                <input type="text" id="lastname" name="lastname" required>
                             </div>
                         </section>
 
                         <section>
                             <div>
                                 <label for="email">Email</label>
-                                <input type="email" id="email" name="email">
+                                <input type="email" id="email" name="email" placeholder="email@email.com" required>
                             </div>
                             <div>
                                 <label for="phonenumber">Phone Number</label>
-                                <input type="tel" id="phonenumber" name="phonenumber">
+                                <input type="tel" id="phonenumber" name="phonenumber" placeholder="777-444-3333" pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]\d{3}[\s.-]\d{4}$" required>
                             </div>
                         </section>
                         
                         <section>
                             <div>
                                 <label for="password">Password</label>
-                                <input type="password" id="password" name="password">
+                                <input type="password" id="password" name="password" minlength="8" maxlength="16" required>
                             </div>
                             <div>
                                 <label for="confirmpass">Confirm Password</label>
-                                <input type="password" id="confirmpass">
+                                <input type="password" id="confirmpass" required>
                             </div>
                         </section>
                         <button type="submit">Create Account</button>
@@ -62,6 +63,5 @@
                 </div>
             </div>
         </div>
-        
     </body>
 </html>
